@@ -1,3 +1,5 @@
+3926.	[doc]		Added doc for geoip-directory. [RT #36877]
+
 3925.	[bug]		DS lookup of RFC 1918 empty zones failed. [RT #36917]
 
 3924.	[bug]		Improve 'rndc addzone' error reporting. [RT #35187]
